cmake_minimum_required(VERSION 3.23)
project(labs C)

set(CMAKE_C_STANDARD 99)

add_executable(lab1 lab1.c)

add_executable(lab2 lab2.c)
add_executable(lab3 lab3.c)
add_executable(lab4 lab4.c)
add_executable(lab5 lab5.c)
add_executable(lab6 lab6.c)
add_executable(lab7 lab7.c)
add_executable(lab8 lab8.c)